--- a/sample-web/values.yaml
+++ b/sample-web/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 2
 
 image:
-  repository: x97m/pipeline-example
+  repository: x97m/sample
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "beta"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -62,4 +62,4 @@ tolerations: []
 
 affinity: {}
 
-port: 8080
+port: 80
