--- a/sample-web/values.yaml
+++ b/sample-web/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: x97m/pipeline-example
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "24-09-09"
 
 imagePullSecrets: []
 nameOverride: ""
